Fix grid spacing

--- a/style.css
+++ b/style.css
@@ -163,16 +163,12 @@ body {
 .project-wrapper {
     padding: 30px;
     display: grid;  /** grid for the project cards */
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 25px;
 }
 .card {
-    padding: 20px;
-    margin: 30px;
-
     display: flex;
     flex-direction: column;
-    height: 200px;
-    width: 300px;
     background-color: var(--main-color);
     border-left: 10px solid #d58f1e;
     border-radius: 10px;
@@ -194,16 +190,20 @@ body {
 .side-content {
     grid-column: 2/3;
     grid-row: 1/2;
+    margin-top: 60px;
+    margin-right: 30px;
 }
 .announcement {
     background-color: var(--main-color);
-
+    border-radius: 10px;
+    padding: 5px 10px;
 }
 .announcement-card {
     margin: 30px;
 }
 .trending {
     background-color: var(--main-color);
+    border-radius: 10px;
 }
 .other-user-card {
     margin: 30px;
